--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "atom": ">=0.141.0"
   },
   "dependencies": {
-    "atom-select-list": "0.0.15",
-    "iconv-lite": "^0.4.4",
-    "jschardet": "^1.1.0"
+    "atom-select-list": "0.0.15"
   },
   "consumedServices": {
     "status-bar": {
